--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -28,19 +28,31 @@
       <br>
       <b id="speaker"></b>
       <br>
+      <!--
+
+      zone was removed for the first product
+
       <b id="zone"></b>
+      -->
       <br>
       <b id="volume"></b>
     </div>
     <div>
       <paper-button on-click="_selectSpeaker">speaker</paper-button>
     </div>
+    <!--
+    
+    zone was removed for the first product
+
     <div id="zoneSelectionButton">
       <paper-button on-click="_selectZone">zone</paper-button>
     </div>
+    -->
+    <!--
     <div id="allZoneSelectionButton">
       <paper-button on-click="_selectAllZone">all zone</paper-button>
     </div>
+    -->
   </template>
   <script>
 
