--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -45,9 +45,9 @@
           <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
         </div>
 
-        <h1 id="musicvolume"> Music Volume </h1>
+        <h1 id="musicvolume" style="margin-top: calc(.02 * 100vh)"> Music Volume </h1>
 
-        <div id="sliderInvis2" class="layout horizontal">
+        <div id=" sliderInvis2" class="layout horizontal">
           <paper-input id="musicMin" style="margin-left: .5%; width: 30px;" label="Min" placeholder=""></paper-input>
           <paper-slider id="volumeInvis2" style="visibility: hidden;" pin min="0" max="100"></paper-slider>
           <paper-input id="musicMax" style="margin-right: .5%; width: 30px;" label="Max" placeholder="" text-align="center"></paper-input>
@@ -59,7 +59,7 @@
           <paper-icon-button icon="add" on-click="incrementMusicVolume"></paper-icon-button>
         </div>
 
-        <h1 id="pagingvolumelabel"> Paging Volume </h1>
+        <h1 id="pagingvolumelabel" style="margin-top: calc(.02 * 100vh)"> Paging Volume </h1>
 
         <div id="sliderInvis3" class="layout horizontal">
           <paper-input id="pagingMin" style="margin-left: .5%; width: 30px;" label="Min" placeholder=""></paper-input>
@@ -73,7 +73,7 @@
           <paper-icon-button icon="add" on-click="incrementPagingVolume"></paper-icon-button>
         </div>
 
-        <h1 id="soundmaskingvolume"> Sound Masking Volume </h1>
+        <h1 id="soundmaskingvolume" style="margin-top: calc(.02 * 100vh)"> Sound Masking Volume </h1>
 
         <div id="sliderInvis4" class="layout horizontal">
           <paper-input id="maskingMin" style="margin-left: .5%; width: 30px;" label="Min" placeholder=""></paper-input>
