--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -213,6 +213,7 @@
 
       <div class="card-actions">
         <paper-button class="papercardcenter" on-click="_setEqualizerClicked">set equalizer</paper-button>
+
         <paper-dropdown-menu class="papercardcenter" id="equalizerMenu" no-label-float label="Equalizer Preset:">
           <paper-listbox id="equalizerListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
               <paper-item id="Currently Applied" value="Currently Applied">Currently Applied</paper-item>
@@ -573,17 +574,24 @@
       _cancelSwitchPressed: function(event) {
         switch(lastEQMode) {
           case "masking":
-            musicMenu.style.visibility = "hidden";
             equalizerMenu.style.visibility = "visible";
+            musicMenu.style.visibility = "hidden";
+            pagingMenu.style.visibility = "hidden";
             break;
 
           case "music":
-            musicMenu.style.visibility = "visible";
             equalizerMenu.style.visibility = "hidden";
+            musicMenu.style.visibility = "visible";
+            pagingMenu.style.visibility = "hidden";
+            break;
+
+          case "paging":
+            equalizerMenu.style.visibility = "hidden";
+            musicMenu.style.visibility = "hidden";
+            pagingMenu.style.visibility = "visible";
             break;
 
           default:
-            //console.log("fuck me");
         }
         this.$.equalizerSelector.selected = lastEQMode;
       },
