--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -8,9 +8,11 @@
 <link rel="import" href="/bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="/bower_components/paper-styles/paper-styles.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="/bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="/bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="/bower_components/paper-item/paper-item.html">
 
 <link rel="import" href="/components/omaha-app.html">
-
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/ >
 
@@ -46,11 +48,24 @@
         display: none;
       }
     </style>
-    <div class="flex company">Project Omaha</div>
-    <template is="dom-if" if="{{redirect}}">
+    <div>
+      <div id="loginForm" class="flex company" style="width: 40%;">Project Omaha
+        <div style="width: 25%; position: absolute; top: -10px; left: 315px;">
+          <paper-dropdown-menu label="Controller">
+            <paper-listbox id="controllerListBox" class="dropdown-content" attr-for-selected="value" selected="{{selection}}" value="0">
+              <paper-item id="1" value="192.168.1.101">1 (192.168.1.101)</paper-item>
+              <paper-item id="2" value="192.168.1.102">2 (192.168.1.102)</paper-item>
+              <paper-item id="3" value="192.168.1.103">3 (192.168.1.103)</paper-item>
+              <paper-item id="4" value="127.0.0.1">4 (192.168.1.104)</paper-item>
+            </paper-listbox>
+          </paper-dropdown-menu>
+        </div> 
+      </div>
+    </div>
+    <template id="template" is="dom-if" if="{{redirect}}">
       <div class="message">Please login before proceeding</div>
     </template>
-    <div class="message">{{err}}</div>
+    <div id="message" class="message">{{err}}</div>
     <form on-iron-form-submit="_submit" is="iron-form" id="form"  method="post">
       <paper-input id="username" name="username" label="Username" required></paper-input>
       <paper-input id="password" name="password" label="Password" type="password" required></paper-input>
@@ -69,8 +84,13 @@
     <paper-toast id="toast"><span>{{err}}</span></paper-toast>
   </template>
   <script>
+    var ss;
     Polymer({
       is: 'login-form',
+
+      listeners: {
+        'controllerListBox.iron-select': '_changeController'
+      },
 
       /**
        * Submit takes the text fields in the login screen and sends them off to the server for validation.
@@ -84,6 +104,15 @@
           password: this.$.password.value
         }
         this.$.loginAjax.generateRequest();
+      },
+
+      _changeController: function(event) {
+        window.location="http://" + this.$.controllerListBox.selected + ":8080";
+        var timerID = setInterval(
+          function() {
+            document.getElementById("message").innerHTML = "Controller from that address is not responding";
+            cancelInterval(timerID);
+        }, 5000)
       },
 
       /**
@@ -102,9 +131,13 @@
           document.location.href = "/app/"
         } else {
           console.log(data.response);
+          console.log(this);
           this.err = data.response.err;
+          console.log(typeof data.response.err);
           this.$.toast.show();
         }
+      },
+      ready: function() {
       }
     });
   </script>
