--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -24,11 +24,23 @@
       }
 
     </style>
-      <paper-toolbar>
-        <paper-icon-button on-click="_toggleDrawerPressed" icon="menu"></paper-icon-button>
-        <paper-icon-button on-click="_backPressed" id="back" icon="arrow-back"></paper-icon-button>
-        <div class="title">Project Omaha</div>
-      </paper-toolbar>
+
+    <paper-toolbar>
+      <paper-icon-button on-click="_toggleDrawerPressed" icon="menu"></paper-icon-button>
+      <paper-icon-button on-click="_backPressed" id="back" icon="arrow-back"></paper-icon-button>
+
+      <div class="title">Project Omaha</div>
+      <paper-button id="logout" on-click="_logout" style="float: right;">Logout</paper-button>
+    </paper-toolbar>
+
+    <iron-ajax
+        id="logoutAjax"
+        url="/logout/"
+        method="POST"
+        content-type="application/json"
+        handle-as="json"
+        debounce-duration="300">
+    </iron-ajax>
   </template>
   <script>
     Polymer({
@@ -53,6 +65,20 @@
       _backPressed: function() {
         this.fire('backpressed', {});
         this.hideBackArrow();
+      },
+
+      _logout: function() {
+        this.$.logoutAjax.body = {
+          "hash": document.cookie.slice(8, document.cookie.length)
+        };
+
+        this.$.logoutAjax.generateRequest();
+
+        var d = new Date();
+        d.setYear(d.getYear() - 20);
+        document.cookie = "name=" + sessionCookie + "expires=" + d.toUTCString();
+
+        window.location = "http://" + window.location.hostname + ":8080";
       },
 
       showBackArrow: function() {
