--- a/software/src/omaha/templates/components/zones/zone-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-controller.html
@@ -45,12 +45,10 @@
       equalizer-controller-zone {
         width: 90%;
         min-width: 300px;
-        height: 100%;
       }
 
       averaging-controller {
         width: 80%;
-        height: 100%;
       }
 
       @media (min-width: 769px) {
@@ -222,6 +220,10 @@
             }
           }
         }
+      },
+
+      adjustSizeZone: function() {
+        adjustSizeZone();
       },
 
       _initializeStatus: function(speaker) {
