fixed some stuff, made the logout thing work, thresholds fixed - database problem, styling fixed

--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -92,7 +92,7 @@
         <paper-button on-click="_setVolumeClicked">set volume</paper-button>
       </div>
     </paper-card>
-    <paper-toast id="toast">Volume set to <span>{{volume}}</span></paper-toast>
+    <paper-toast id="toast"></paper-toast>
 
     <paper-toast id="invalidVolumeToast">Volume settings must be within the minimum and maximum settings</paper-toast>
 
@@ -187,6 +187,7 @@
           }
 
           this.volume = this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume + " " + this.internalSoundMaskingVolume;
+          this.$.toast.text = "Volume set to " + this.$.volume2.value + ", " + this.$.volume3.value + ", " + this.$.volume4.value + ", " + this.$.volume5.value;
           this.$.toast.show();
           //console.log("_setVolumeClicked");
         } else {
@@ -224,6 +225,8 @@
             };
             this.$.updateVolumesZone.generateRequest();
           }
+          console.log("Volume set to ", this.$.volume2.value, this.$.volume3.value, this.$.volume4.value, this.$.volume5.value);
+          this.$.toast.text = "Volume set to " + this.$.volume2.value + ", " + this.$.volume3.value + ", " + this.$.volume4.value + ", " + this.$.volume5.value;
           this.$.toast.show();
           //console.log("_setVolumeClicked");
         }
