--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -179,23 +179,27 @@
        * The handlelogin function is a callback for the submit function that is fired on response. The function stores the level, speakerid, and zoneid in localStorage so that it can be retrieved by other classes. The function recieves as session hash and assigns it as a session cookie. During this time it also makes the expiration date of the cookie 36 hours from the time it was created.
        */
       _handleLogin: function(event, data, x) {
-        var d = new Date();
-        d.setYear(d.getYear() - 20);
-        document.cookie = "name=" + sessionCookie + "expires=" + d.toUTCString();
-
         console.log(data.response);
         localStorage.setItem('level', data.response.level);
         localStorage.setItem('speakerid', data.response.speakerid);
         localStorage.setItem('zoneid', data.response.zoneid);
         if(data.response.hash !== undefined) {
           var sessionCookie = data.response.hash;
+          console.log(sessionCookie)
           /*var d = new Date();
           d.setHours(d.getHours() + 36);
           document.cookie = "name=" + sessionCookie + "; session=" + sessionCookie + "; expires=" + d.toUTCString() + ";";*/
-          document.cookie = "name=" + sessionCookie + "; session=" + sessionCookie + ";";
-          document.location.href = "/app/"
+
+          document.cookie = "path=/";
+          document.cookie = "session=" + sessionCookie;
+          console.log(window.location);
+          console.log(document.cookie);
+          //document.location.href = "/app/"
+          window.location = "http://" + window.location.hostname + ":8080/app/";
         } else if (data.response.success){
-          document.location.href = "/app/"
+          console.log(data.response.hash);
+          //document.location.href = "/app/"
+          //window.location = "http://" + window.location.hostname + ":8080/app/";
         } else {
           console.log(data.response);
           console.log(this);
