--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -89,6 +89,8 @@
     <iron-ajax
       id="systemStatusAjax"
       url="/system/"
+      with-credentials="true"
+      method="PUT"
       content-type="application/json"
       handle-as="json"
       on-response="_initializeStatus"
@@ -580,7 +582,7 @@
        * The keep alive response is a callback for a function that schedules the speaker update querying to check whether they are still functioning or not.
        */
       _keepAliveResponse: function(event, data) {
-        //console.log(data.response);
+        console.log(data.response);
         if(data.response.status !== this.controllers[data.response.id - 1].status) { 
           updateMapForError(data.response.id, (this.controllers[data.response.id - 1].status) === 0 ? true : false);
           this.controllers[data.response.id - 1].status = data.response.status;
@@ -590,7 +592,16 @@
       /**
        * This function loads after the webcomponents load and sets some variables up and scheduling a self-executing function that will continuously execute itself every second.
        */
-      ready: function() {       
+      ready: function() {      
+        console.log(document.cookie);
+        console.log(this.$.systemStatusAjax.body)
+        
+        this.$.systemStatusAjax.body = {
+          "hash": document.cookie.slice(5, 35)
+        };
+        
+        this.$.systemStatusAjax.withCredentials = true;
+        console.log(this.$.systemStatusAjax.body);
         this.$.systemStatusAjax.generateRequest();
         this.$.nav.hideBackArrow();
         this.$.panel.forceNarrow = true;
@@ -599,10 +610,10 @@
         setUI();
 
         // this is asynchonous and a better usage that using setInterval
-        (function keepAlive() {
+        /*(function keepAlive() {
           controllerUpdateAjax.generateRequest();
           setTimeout(keepAlive, 1000);
-        })();
+        })();*/
       }
 
     });
