--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -68,16 +68,27 @@
       },
 
       _logout: function() {
-        this.$.logoutAjax.body = {
-          "hash": document.cookie.slice(8, document.cookie.length)
-        };
+        if(document.cookie.includes("expires")) {
+          this.$.logoutAjax.body = {
+            //"hash": document.cookie.slice(8, document.cookie.length)
+            "hash": document.cookie.split('; ')[2].slice(8, 38)
+          };
+        } else {
+          this.$.logoutAjax.body = {
+            //"hash": document.cookie.slice(8, document.cookie.length)
+            "hash": document.cookie.split('; ')[1].slice(8, 38)
+          };
+        }
 
         this.$.logoutAjax.generateRequest();
 
-        var d = new Date();
+        /*var d = new Date();
         d.setYear(d.getYear() - 20);
-        document.cookie = "name=" + sessionCookie + "expires=" + d.toUTCString();
-
+        document.cookie = "name=" + sessionCookie + "; expires=" + d.toUTCString() + ";";
+        */
+        document.cookie = "expires=Thu, 01 Jan 1970 00:00:00 UTC";
+        //document.cookie = -1;
+        console.log(document.cookie);
         window.location = "http://" + window.location.hostname + ":8080";
       },
 
