--- a/software/src/omaha/templates/components/paging-controller.html
+++ b/software/src/omaha/templates/components/paging-controller.html
@@ -151,11 +151,13 @@
         if(on == 1) {
           //console.log("on");
           on--;
-          Polymer.dom(sendPageButton).innerHTML = "stop page";
+          //Polymer.dom(sendPageButton).innerHTML = "stop page";
+          this.$.sendPageButton.innerHTML = "send page";
         } else {
           //console.log("off");
           on++;
-          Polymer.dom(sendPageButton).innerHTML = "send page";
+          this.$.sendPageButton.innerHTML = "stop page";
+          //Polymer.dom(sendPageButton).innerHTML = "send page";
         }
 
         this.$.pagingRequest.body = {
